email validation working

--- a/index.html
+++ b/index.html
@@ -252,19 +252,114 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <!-- Review box -->
+            <div class="review-box">
+              <i class="bx bxs-quote-alt-left"></i>
 
-            <div class="review-box"></div>
+              <p class="review-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
+                voluptatum laborum iusto vitae est ad, at sequi dolores?
+              </p>
+
+              <div class="review-profile">
+                <h2>Jane Smith</h2>
+                <span>Loud mouth</span>
+                <img src="images/jane-smith.jpg" alt="" />
+              </div>
+            </div>
           </div>
-          <!-- <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div> -->
+          <div class="swiper-slide">
+            <!-- Review box -->
+            <div class="review-box">
+              <i class="bx bxs-quote-alt-left"></i>
+
+              <p class="review-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
+                voluptatum laborum iusto vitae est ad, at sequi dolores?
+              </p>
+
+              <div class="review-profile">
+                <h2>Seth Mark</h2>
+                <span>Loud mouth</span>
+                <img src="images/seth_mark.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <!-- Review box -->
+            <div class="review-box">
+              <i class="bx bxs-quote-alt-left"></i>
+
+              <p class="review-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
+                voluptatum laborum iusto vitae est ad, at sequi dolores?
+              </p>
+
+              <div class="review-profile">
+                <h2>Martin Paul</h2>
+                <span>Loud mouth</span>
+                <img src="images/martin_paul.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <!-- Review box -->
+            <div class="review-box">
+              <i class="bx bxs-quote-alt-left"></i>
+
+              <p class="review-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
+                voluptatum laborum iusto vitae est ad, at sequi dolores?
+              </p>
+
+              <div class="review-profile">
+                <h2>Julia Robertson</h2>
+                <span>Loud mouth</span>
+                <img src="images/julia_robertson.jpg" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
         <div class="swiper-pagination"></div>
       </div>
     </section>
+
+    <!-- Subscribe -->
+
+    <section class="subscribe container" id="subscribe">
+      <!-- Heading -->
+
+      <h2 class="heading">Subscribe</h2>
+
+      <!-- Subscribe content -->
+      <form action="" class="subscribe-form" id="subscribe-form">
+        <input
+          type="email"
+          name=""
+          id=""
+          required
+          placeholder="Email address"
+          class="email"
+        />
+        <input type="submit" value="Subscribe" class="subscribe-btn" />
+      </form>
+    </section>
   </body>
+
+  <!-- Email Service -->
+
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+  ></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("GQ1189e0HMla2bEP8");
+    })();
+  </script>
 
   <!-- Link Swiper Js -->
   <script src="js/swiper-bundle.min.js"></script>
