--- a/index.html
+++ b/index.html
@@ -349,17 +349,8 @@
     </section>
   </body>
 
-  <!-- Email Service -->
-
-  <script
-    type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
-  ></script>
-  <script type="text/javascript">
-    (function () {
-      emailjs.init("GQ1189e0HMla2bEP8");
-    })();
-  </script>
+  <!-- Sweet Alert -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <!-- Link Swiper Js -->
   <script src="js/swiper-bundle.min.js"></script>
