Rework php to include localhost

--- a/index.html
+++ b/index.html
@@ -335,11 +335,10 @@
       <h2 class="heading">Subscribe</h2>
 
       <!-- Subscribe content -->
-      <form action="" class="subscribe-form" id="subscribe-form">
+      <form action="#" class="subscribe-form" id="subscribe-form">
         <input
           type="email"
           name=""
-          id=""
           required
           placeholder="Email address"
           class="email"
