changes to composer

--- a/index.html
+++ b/index.html
@@ -355,5 +355,5 @@
   <script src="js/swiper-bundle.min.js"></script>
 
   <!-- JavaScript -->
-  <script src="js/script.js"></script>
+  <script src="js/script_oop.js"></script>
 </html>
