--- a/index.html
+++ b/index.html
@@ -77,32 +77,34 @@
     </header>
 
     <!-- Home -->
-    <section class="home container" id="home">
-      <div class="home-content">
-        <div class="home-text">
-          <h3>Welcome To</h3>
-          <h2><span class="color">OVERSABI</span></h2>
-          <p>
-            Welcome to <span class="color">Oversabi</span>, a revolutionary
-            decentralized autonomous organization (DAO) that is dedicated to
-            empowering Africa's future workforce. Our
-            <span class="color">community-driven</span> edutech platform is
-            designed to provide a comprehensive education in the skills and
-            knowledge necessary to <span class="color">succeed</span> in today's
-            job market, from finance to software engineering and everything
-            in-between.
-          </p>
+    <div class="dummy">
+      <section class="home container" id="home">
+        <div class="home-content">
+          <div class="home-text">
+            <h3>Welcome To</h3>
+            <h2><span class="color">OVERSABI</span></h2>
+            <p>
+              Welcome to <span class="color">Oversabi</span>, a revolutionary
+              decentralized autonomous organization (DAO) that is dedicated to
+              empowering Africa's future workforce. Our
+              <span class="color">community-driven</span> edutech platform is
+              designed to provide a comprehensive education in the skills and
+              knowledge necessary to <span class="color">succeed</span> in
+              today's job market, from finance to software engineering and
+              everything in-between.
+            </p>
 
-          <!-- Socials -->
-          <div class="social">
-            <a href="#" target="_blank"><i class="bx bxl-instagram"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-linkedin"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-telegram"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-twitter"></i></a>
+            <!-- Socials -->
+            <div class="social">
+              <a href="#" target="_blank"><i class="bx bxl-instagram"></i></a>
+              <a href="#" target="_blank"><i class="bx bxl-linkedin"></i></a>
+              <a href="#" target="_blank"><i class="bx bxl-telegram"></i></a>
+              <a href="#" target="_blank"><i class="bx bxl-twitter"></i></a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <!-- About -->
     <section class="about container" id="about">
