--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <!-- Home -->
-    <div class="dummy">
+    <div class="home-container">
       <section class="home container" id="home">
         <div class="home-content">
           <div class="home-text">
@@ -106,291 +106,296 @@
       </section>
     </div>
 
-    <!-- About -->
-    <section class="about container" id="about">
-      <!-- Heading -->
+    <div class="background-container">
+      <!-- About -->
+      <section class="about container" id="about">
+        <!-- Heading -->
 
-      <h2 class="heading">About</h2>
+        <h2 class="heading">About</h2>
 
-      <!-- About content -->
+        <!-- About content -->
 
-      <div class="about-content">
-        <div class="about-data">
-          <span>About Oversabi</span>
-          <h2>
-            Be part of our community and <br />
-            the future of edutech in Africa.
-          </h2>
-          <a href="#" class="btn" target="_blank"
-            >White Paper <i class="bx bx-book-reader"></i
-          ></a>
+        <div class="about-content">
+          <div class="about-data">
+            <span>About Oversabi</span>
+            <h2>
+              Be part of our community and <br />
+              the future of edutech in Africa.
+            </h2>
+            <a href="#" class="btn" target="_blank"
+              >White Paper <i class="bx bx-book-reader"></i
+            ></a>
+          </div>
+          <div class="about-text">
+            <p>
+              Oversabi is an online education platform that helps people in
+              Africa learn the skills they need to succeed in today's job
+              market. We offer a wide range of classes and resources, from
+              finance to software engineering, that are designed to keep up with
+              the latest trends and in-demand skills.
+            </p>
+            <p>
+              Our community-driven approach means that our members can vote on
+              what classes we offer, so we can make sure we're teaching the
+              skills that are most useful to them.
+            </p>
+            <p>
+              We also offer support services like mentorship, networking, and
+              career counseling to help our members reach their goals. Everyone
+              is welcome to join Oversabi, regardless of their background or
+              financial situation.
+            </p>
+          </div>
         </div>
-        <div class="about-text">
-          <p>
-            Oversabi is an online education platform that helps people in Africa
-            learn the skills they need to succeed in today's job market. We
-            offer a wide range of classes and resources, from finance to
-            software engineering, that are designed to keep up with the latest
-            trends and in-demand skills.
-          </p>
-          <p>
-            Our community-driven approach means that our members can vote on
-            what classes we offer, so we can make sure we're teaching the skills
-            that are most useful to them.
-          </p>
-          <p>
-            We also offer support services like mentorship, networking, and
-            career counseling to help our members reach their goals. Everyone is
-            welcome to join Oversabi, regardless of their background or
-            financial situation.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Roadmap -->
+      <!-- Roadmap -->
 
-    <section class="roadmap container" id="roadmap">
-      <!-- Heading -->
+      <section class="roadmap container" id="roadmap">
+        <!-- Heading -->
 
-      <h2 class="heading">Roadmap</h2>
+        <h2 class="heading">Roadmap</h2>
 
-      <!-- Roadmap content -->
+        <!-- Roadmap content -->
 
-      <div class="roadmap-content">
-        <!-- <div class="roadmap-box">
+        <div class="roadmap-content">
+          <!-- <div class="roadmap-box">
                 <i class='bx bx-bulb' ></i>
                 <h2>Conception</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, hic!</p>
             </div> -->
-        <div class="roadmap-box">
-          <i class="bx bxl-graphql"></i>
-          <h2>Web3</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-            hic!
-          </p>
-        </div>
-        <div class="roadmap-box">
-          <i class="bx bx-laptop"></i>
-          <h2>Edutech</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-            hic!
-          </p>
-        </div>
-        <div class="roadmap-box">
-          <i class="bx bxs-component"></i>
-          <h2>Research</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-            hic!
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Articles -->
-
-    <section class="articles container" id="articles">
-      <!-- Heading -->
-
-      <h2 class="heading">Articles</h2>
-
-      <!-- Articles content -->
-
-      <div class="articles-content">
-        <div class="articles-box">
-          <img
-            src="images/cloud-technology-with-futuristic-hologram-smartwatch.jpg"
-            alt=""
-            class="articles-img"
-          />
-
-          <!-- Overlay -->
-
-          <div class="articles-overlay">
+          <div class="roadmap-box">
+            <i class="bx bxl-graphql"></i>
             <h2>Web3</h2>
-            <a href="#">
-              <i class="bx bx-link-alt"></i>
-            </a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+              hic!
+            </p>
           </div>
-        </div>
-
-        <div class="articles-box">
-          <img src="images/15404.jpg" alt="" class="articles-img" />
-
-          <!-- Overlay -->
-
-          <div class="articles-overlay">
-            <h2>Blockchain</h2>
-            <a href="#">
-              <i class="bx bx-link-alt"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="articles-box">
-          <img src="images/14622.jpg" alt="" class="articles-img" />
-
-          <!-- Overlay -->
-
-          <div class="articles-overlay">
+          <div class="roadmap-box">
+            <i class="bx bx-laptop"></i>
             <h2>Edutech</h2>
-            <a href="#">
-              <i class="bx bx-link-alt"></i>
-            </a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+              hic!
+            </p>
           </div>
-        </div>
-
-        <div class="articles-box">
-          <img src="images/1100.jpg" alt="" class="articles-img" />
-
-          <!-- Overlay -->
-
-          <div class="articles-overlay">
+          <div class="roadmap-box">
+            <i class="bx bxs-component"></i>
             <h2>Research</h2>
-            <a href="#">
-              <i class="bx bx-link-alt"></i>
-            </a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+              hic!
+            </p>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Community -->
+      <!-- Articles -->
 
-    <section class="community container" id="community">
-      <!-- Heading -->
+      <section class="articles container" id="articles">
+        <!-- Heading -->
 
-      <h2 class="heading">Community</h2>
+        <h2 class="heading">Articles</h2>
 
-      <!-- Community content -->
+        <!-- Articles content -->
 
-      <div class="community-content">
-        <div class="community-box">
-          <h2>3000+</h2>
-          <span>Twitter followers</span>
-        </div>
-        <div class="community-box">
-          <h2>2650+</h2>
-          <span>Telegram followers</span>
-        </div>
-        <div class="community-box">
-          <h2>1870+</h2>
-          <span>Newsletter subscribers</span>
-        </div>
-      </div>
-    </section>
+        <div class="articles-content">
+          <div class="articles-box">
+            <img
+              src="images/cloud-technology-with-futuristic-hologram-smartwatch.jpg"
+              alt=""
+              class="articles-img"
+            />
 
-    <!-- Revievs -->
+            <!-- Overlay -->
 
-    <section class="reviews container" id="reviews">
-      <!-- Heading -->
-
-      <h2 class="heading">Reviews</h2>
-
-      <!-- Reviews content -->
-
-      <div class="reviews-content swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <!-- Review box -->
-            <div class="review-box">
-              <i class="bx bxs-quote-alt-left"></i>
-
-              <p class="review-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
-                voluptatum laborum iusto vitae est ad, at sequi dolores?
-              </p>
-
-              <div class="review-profile">
-                <h2>Jane Smith</h2>
-                <span>Loud mouth</span>
-                <img src="images/jane-smith.jpg" alt="" />
-              </div>
+            <div class="articles-overlay">
+              <h2>Web3</h2>
+              <a href="#">
+                <i class="bx bx-link-alt"></i>
+              </a>
             </div>
           </div>
-          <div class="swiper-slide">
-            <!-- Review box -->
-            <div class="review-box">
-              <i class="bx bxs-quote-alt-left"></i>
 
-              <p class="review-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
-                voluptatum laborum iusto vitae est ad, at sequi dolores?
-              </p>
+          <div class="articles-box">
+            <img src="images/15404.jpg" alt="" class="articles-img" />
 
-              <div class="review-profile">
-                <h2>Seth Mark</h2>
-                <span>Loud mouth</span>
-                <img src="images/seth_mark.jpg" alt="" />
-              </div>
+            <!-- Overlay -->
+
+            <div class="articles-overlay">
+              <h2>Blockchain</h2>
+              <a href="#">
+                <i class="bx bx-link-alt"></i>
+              </a>
             </div>
           </div>
-          <div class="swiper-slide">
-            <!-- Review box -->
-            <div class="review-box">
-              <i class="bx bxs-quote-alt-left"></i>
 
-              <p class="review-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
-                voluptatum laborum iusto vitae est ad, at sequi dolores?
-              </p>
+          <div class="articles-box">
+            <img src="images/14622.jpg" alt="" class="articles-img" />
 
-              <div class="review-profile">
-                <h2>Martin Paul</h2>
-                <span>Loud mouth</span>
-                <img src="images/martin_paul.jpg" alt="" />
-              </div>
+            <!-- Overlay -->
+
+            <div class="articles-overlay">
+              <h2>Edutech</h2>
+              <a href="#">
+                <i class="bx bx-link-alt"></i>
+              </a>
             </div>
           </div>
-          <div class="swiper-slide">
-            <!-- Review box -->
-            <div class="review-box">
-              <i class="bx bxs-quote-alt-left"></i>
 
-              <p class="review-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Suscipit sed officia fugiat, id eveniet voluptas exercitationem
-                voluptatum laborum iusto vitae est ad, at sequi dolores?
-              </p>
+          <div class="articles-box">
+            <img src="images/1100.jpg" alt="" class="articles-img" />
 
-              <div class="review-profile">
-                <h2>Julia Robertson</h2>
-                <span>Loud mouth</span>
-                <img src="images/julia_robertson.jpg" alt="" />
-              </div>
+            <!-- Overlay -->
+
+            <div class="articles-overlay">
+              <h2>Research</h2>
+              <a href="#">
+                <i class="bx bx-link-alt"></i>
+              </a>
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Subscribe -->
+      <!-- Community -->
 
-    <section class="subscribe container" id="subscribe">
-      <!-- Heading -->
+      <section class="community container" id="community">
+        <!-- Heading -->
 
-      <h2 class="heading">Subscribe</h2>
+        <h2 class="heading">Community</h2>
 
-      <!-- Subscribe content -->
-      <form action="#" class="subscribe-form" id="subscribe-form">
-        <input
-          type="email"
-          name=""
-          required
-          placeholder="Email address"
-          class="email"
-        />
-        <input type="submit" value="Subscribe" class="subscribe-btn" />
-      </form>
-    </section>
+        <!-- Community content -->
 
+        <div class="community-content">
+          <div class="community-box">
+            <h2>3000+</h2>
+            <span>Twitter followers</span>
+          </div>
+          <div class="community-box">
+            <h2>2650+</h2>
+            <span>Telegram followers</span>
+          </div>
+          <div class="community-box">
+            <h2>1870+</h2>
+            <span>Newsletter subscribers</span>
+          </div>
+        </div>
+      </section>
+
+      <!-- Revievs -->
+
+      <section class="reviews container" id="reviews">
+        <!-- Heading -->
+
+        <h2 class="heading">Reviews</h2>
+
+        <!-- Reviews content -->
+
+        <div class="reviews-content swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <!-- Review box -->
+              <div class="review-box">
+                <i class="bx bxs-quote-alt-left"></i>
+
+                <p class="review-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Suscipit sed officia fugiat, id eveniet voluptas
+                  exercitationem voluptatum laborum iusto vitae est ad, at sequi
+                  dolores?
+                </p>
+
+                <div class="review-profile">
+                  <h2>Jane Smith</h2>
+                  <span>Loud mouth</span>
+                  <img src="images/jane-smith.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- Review box -->
+              <div class="review-box">
+                <i class="bx bxs-quote-alt-left"></i>
+
+                <p class="review-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Suscipit sed officia fugiat, id eveniet voluptas
+                  exercitationem voluptatum laborum iusto vitae est ad, at sequi
+                  dolores?
+                </p>
+
+                <div class="review-profile">
+                  <h2>Seth Mark</h2>
+                  <span>Loud mouth</span>
+                  <img src="images/seth_mark.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- Review box -->
+              <div class="review-box">
+                <i class="bx bxs-quote-alt-left"></i>
+
+                <p class="review-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Suscipit sed officia fugiat, id eveniet voluptas
+                  exercitationem voluptatum laborum iusto vitae est ad, at sequi
+                  dolores?
+                </p>
+
+                <div class="review-profile">
+                  <h2>Martin Paul</h2>
+                  <span>Loud mouth</span>
+                  <img src="images/martin_paul.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- Review box -->
+              <div class="review-box">
+                <i class="bx bxs-quote-alt-left"></i>
+
+                <p class="review-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Suscipit sed officia fugiat, id eveniet voluptas
+                  exercitationem voluptatum laborum iusto vitae est ad, at sequi
+                  dolores?
+                </p>
+
+                <div class="review-profile">
+                  <h2>Julia Robertson</h2>
+                  <span>Loud mouth</span>
+                  <img src="images/julia_robertson.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+
+      <!-- Subscribe -->
+
+      <section class="subscribe container" id="subscribe">
+        <!-- Heading -->
+
+        <h2 class="heading">Subscribe</h2>
+
+        <!-- Subscribe content -->
+        <form action="#" class="subscribe-form" id="subscribe-form">
+          <input
+            type="email"
+            name=""
+            required
+            placeholder="Email address"
+            class="email"
+          />
+          <input type="submit" value="Subscribe" class="subscribe-btn" />
+        </form>
+      </section>
+    </div>
     <!-- Footer -->
 
     <section class="footer container" id="footer">
